--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import './color.variable.scss';
+
 * {
   box-sizing: border-box;
 }
@@ -6,4 +8,16 @@ html {
 }
 body {
   min-height: 100vh;
+  background-color: $main-color;
+}
+input {
+  font: 500 16px/1 'Inter', sans-serif;
+  padding-left: 2px;
+}
+button {
+  font: 500 16px/1 'Inter', sans-serif;
+}
+.wrapper {
+  width: 100%;
+  padding-top: 30px;
 }
