--- a/src/components/Todo/TodoItem/todoitem.module.scss
+++ b/src/components/Todo/TodoItem/todoitem.module.scss
@@ -51,3 +51,10 @@
   width: 15%;
   height: 100%;
 }
+
+@media screen and (max-width: 1300px) {
+  .todoItem__edit, .todoItem__delete {
+    padding: 0;
+    font-size: 14px;
+  }
+}
