--- a/src/components/TodoHistory/todoHistory.module.scss
+++ b/src/components/TodoHistory/todoHistory.module.scss
@@ -3,8 +3,8 @@
 .todoHistory {
   width: 200px;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 1rem;
+  top: 1rem;
   background: $white-color;
   border-radius: 10px;
   padding: 12px 10px;
